# reservoir-forecast

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/processed/: eda_summary.json  reservoirs_long.csv  reservoirs_pivot.csv
data/raw/: AguaEmbalsada_RioCofio_LaAcena.csv  AguaEmbalsada_RioGuadalix_Pedrezuela.csv  AguaEmbalsada_RioGuadarrama-Aulencia_LaJorosa.csv  AguaEmbalsada_RioGuadarrama-Aulencia_Navalmedio.csv  AguaEmbalsada_RioGuadarrama-Aulencia_Valmayor.csv  AguaEmbalsada_RioJarama_ElVado.csv  AguaEmbalsada_RioLosMorales_LosMorales.csv  AguaEmbalsada_RioLozoya_ElAtazar.csv  AguaEmbalsada_RioLozoya_ElVillar.csv  AguaEmbalsada_RioLozoya_LaPinilla.csv  AguaEmbalsada_RioLozoya_PuentesViejas.csv  AguaEmbalsada_RioLozoya_Riosequillo.csv  AguaEmbalsada_RioManzanares_Navacerrada.csv  AguaEmbalsada_RioManzanares_Santillana.csv
models/: lstm_bundle.pkl  model_comparison.csv  prophet_bundle.pkl  xgb_bundle.pkl
notebooks/: 01_etl.ipynb  02_eda.ipynb  03_modelling.ipynb  Hugo_Hernandez_Moreno_AB_U15.ipynb
pages/: 01_Models.py  02_Drought.py  03_Reservoirs.py
src/: etl.py  evaluate.py  features.py  forecast.py
tests/: test_etl.py  test_evaluate.py  test_features.py  test_forecast.py
