[project]
name = "reservoir-forecast"
version = "0.1.0"
description = "Time series forecasting of Madrid reservoir capacity. Prophet, SARIMAX and Bidirectional LSTM on monthly data 1998-2021."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=3.0.0",
    "plotly>=6.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.0",
    "statsmodels>=0.14.0",
    "prophet>=1.1.0",
    "streamlit>=1.40.0",
    "tensorflow>=2.21.0",
    "pmdarima>=2.1.1",
    "xgboost>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
